# olcwave

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  README_RU.md  docker-compose-dev.yaml  docker-compose.yaml  docker-compose.yml  install.sh  main.py  model.txt  pyproject.toml  pyrightconfig.json
backend/: .env.example  Dockerfile  config.py  docker-compose.yaml  main.py  pyproject.toml  utils.py
backend/olcrtc/: Dockerfile  entrypoint.sh  go.mod  go.sum  proxy.go
backend/src/: config.py  database.py  main.py  rw_sync.py  traffic.py
backend/src/auth/: dependencies.py  router.py
backend/src/olcrtc/: router.py  schemas.py  sdk.py  service.py
backend/src/profiles/: db.py  models.py  router.py  schemas.py  service.py
backend/src/rw/: sdk.py
backend/src/settings/: models.py  router.py  schemas.py  service.py
backend/src/subscriptions/: router.py  schemas.py  service.py
backend/src/users/: db.py  models.py  router.py  schemas.py  service.py
caddy/: Caddyfile  Caddyfile.dev  Caddyfile.template
docs/: api.md  architecture.md  configuration.md  development.md  installation.md  profiles.md  troubleshooting.md
docs/сonfig_examples/: jitsi_dc.yaml  jitsi_vp8.yaml  telemost_vp8.yaml  wbstream_vp8.yaml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  (+6 more)
olcrtc/: Dockerfile  entrypoint.sh
src/: config.py  main.py  olcmanager.py  rw.py
src/olcrtc/: Dockerfile  entrypoint.sh
src/olcrtc_manager_api/: client.py  docs.md  models.py  utils.py
(+33 files in other folders)
